@@ -1,5 +1,8 @@
 2004-05-07    <chromakode@llama>
 
+	* fgdiag/lib/errors.py (SQLError): Added exception to enhance
+	error trapping and sql debugging.
+
 	* fgdiag/lib/exceptions.py: Changed name to "errors". Old name stepped on the python
 	"exceptions" module.
 
